# inspector-main

./: .gitattributes  .gitignore  KXPacketInspector.sln  KXPacketInspector.vcxproj  findings.md  gw2_cooldown_findings_summary.md  hacklib_gw_2_cooldown_research_notes.md  new.md  promt.md  promt1.md  promt10.md  promt11.md  promt12.md  promt13.md  promt14.md  promt2.md  promt3.md  promt4.md  promt5.md  promt6.md  promt7.md  promt8.md  promt9.md  x64.md
.git_corrupt_backup_20260424_095138/: config  index
docs/: README.md  system-architecture.md
docs/architectural_evidence/: README.md
docs/concepts/: coordinate-systems.md  game-concepts.md
docs/engine_internals/: README.md  internal-imgui-analysis.md  reflection_system.md
docs/methodologies/: README.md  (+10 more)
packet/: CMakeLists.txt  README.md  build-packet.cmd
packet/src/: LogParser.cpp  LogParser.h  main.cpp
src/: AppState.cpp  AppState.h  CaptureQueue.h  Config.h  Console.cpp  Console.h  D3DRenderHook.cpp  D3DRenderHook.h  FilterUtils.cpp  FilterUtils.h  FormattingUtils.cpp  FormattingUtils.h  GameStructs.h  GameThreadHook.cpp  GameThreadHook.h  GuiStyle.cpp  GuiStyle.h  HookManager.cpp  HookManager.h  Hooks.cpp  Hooks.h  ImGuiManager.cpp  ImGuiManager.h  Log.cpp  Log.h  Main.cpp  MessageHandlerHook.cpp  MessageHandlerHook.h  MsgSendHook.cpp  MsgSendHook.h  PacketData.cpp  PacketData.h  PacketHeaders.cpp  PacketHeaders.h  PacketParser.cpp  PacketParser.h  PacketProcessor.cpp  PacketProcessor.h  PacketStructures.h  PatternScanner.cpp  (+9 more)
tools/: build-debug.ps1  build-release.ps1  build.ps1
(+163 files in other folders)
